[gd_scene load_steps=18 format=3 uid="uid://bej0bu2a4drvl"]

[ext_resource type="Script" path="res://Scenes/Treasure/treasure.gd" id="1_hw1sd"]
[ext_resource type="Texture2D" uid="uid://7mttkot377eb" path="res://Assets/TileSet/Chest_open.png" id="2_4nsi2"]
[ext_resource type="Texture2D" uid="uid://biw46ng4l71y6" path="res://Assets/Weapons/Shotgun.png" id="3_8r08q"]
[ext_resource type="Shader" path="res://Shaders/spawn.gdshader" id="3_gij4e"]
[ext_resource type="FontFile" uid="uid://ejil0kwiqa3l" path="res://Assets/UI/m5x7.ttf" id="4_tkjl4"]
[ext_resource type="Texture2D" uid="uid://dk2c10qkovm3a" path="res://Assets/MapObjects/Chest/Medicine Cabinet Frame_0.png" id="5_buxqq"]
[ext_resource type="Texture2D" uid="uid://rta0kjdtsrgy" path="res://Assets/MapObjects/Chest/Medicine Cabinet Frame_3.png" id="6_l7y4x"]
[ext_resource type="Texture2D" uid="uid://buh3es4b5qfp6" path="res://Assets/MapObjects/Chest/Medicine Cabinet Frame_1.png" id="7_hwjgp"]
[ext_resource type="Texture2D" uid="uid://6dsj1bk0mx7w" path="res://Assets/MapObjects/Chest/Medicine Cabinet Frame_2.png" id="8_riw4l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bx67t"]
shader = ExtResource("3_gij4e")
shader_parameter/progress = 1.0
shader_parameter/noise_desnity = 60.0
shader_parameter/beam_size = 0.15
shader_parameter/color = Vector4(0, 1.02, 1.2, 1)

[sub_resource type="Animation" id="Animation_a2sls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4nsi2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chest:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_vka1o"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_buxqq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chest:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Chest:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon_pickup:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mwfgj"]
resource_name = "opened"
length = 4.0001
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_l7y4x")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chest:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon_pickup:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -12), Vector2(0, -8), Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_om5d4"]
resource_name = "opening"
length = 1.00003
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_buxqq"), ExtResource("7_hwjgp"), ExtResource("8_riw4l"), ExtResource("6_l7y4x")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon_pickup:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:shader_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon_pickup:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Chest:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v7kv5"]
_data = {
"RESET": SubResource("Animation_a2sls"),
"idle": SubResource("Animation_vka1o"),
"opened": SubResource("Animation_mwfgj"),
"opening": SubResource("Animation_om5d4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d22hq"]
size = Vector2(18, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_veged"]
radius = 28.0179

[node name="Treasure" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_hw1sd")
shader_value = 0.0

[node name="Chest" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -2.5)
texture = ExtResource("2_4nsi2")
hframes = 4

[node name="Weapon_pickup" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_bx67t")
position = Vector2(0, -10)
texture = ExtResource("3_8r08q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v7kv5")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_d22hq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_veged")

[node name="instructions" type="Label" parent="."]
offset_left = -50.0
offset_top = -36.0
offset_right = 50.0
offset_bottom = 9.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_tkjl4")
theme_override_font_sizes/font_size = 16
text = "[F] to interact"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
